SAD-10: Add root folder, get folder contents, and delete operation.
